almost done project

--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -1,5 +1,8 @@
 body {
-	
+  background-image:url("/images/campus.png");
+  background-color: #cccccc;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #splash_title {
@@ -24,3 +27,4 @@ body {
     border-radius: 12px;
     padding: 16px 20px;
 }
+
